--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri + React + Typescript</title>
-
+    <link 
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" 
+    rel="stylesheet" 
+  />
     <link rel="stylesheet" href="src/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 
   </head>
 
